<resources>
    <string name="app_name">机加云</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_input_name">请输入账号/手机号</string>
    <string name="str_input_psd">请输入密碼</string>
    <string name="str_input_loging">登 录</string>
    <string name="str_input_detail">机加云 - 机床聯網, 車間上雲</string>
    <string name="str_network_excption">網絡異常,請重試!</string>
    <string name="str_login_excption">登錄失敗,請重試!</string>
    <string name="str_exit_btn">注 銷</string>
    <string name="str_morning_shift">早 班</string>
    <string name="str_night_shift">晚 班</string>
    <string name="str_rank">排行榜</string>
    <string name="str_spectaculars">看 板</string>
</resources>

